# agwise-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  README.md  app.py  cz.yaml  docker-compose.yml  main.py  pyproject.toml
api_v1/: routes.py
app/: core.py  gunicorn_config.py  main.py  my_logger.py
app/potato/: agwise_potato.py
app/routes/: FertilizerData.py  __init__.py  routes.py
orm/: database_conn.py  models.py
potato/: agwise_potato.py
sql-migration/: agwise_potato.sql
static/: api-interface.js
templates/: form-filter.html  index.html  user-form-filter.html
